# picobench

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  dev.cmake
.github/workflows/: test.yml
example/: CMakeLists.txt  basic.cpp  locks.cpp
include/picobench/: picobench.hpp
test/: CMakeLists.txt  README.md  basic.cpp
test/multi_cpp/: main.cpp  picobench_configured.hpp  suite_a.cpp  suite_b.cpp  suite_b_cont.cpp
tools/: CMakeLists.txt  README.md  picobench.cpp
